resume after first Semester@CMU

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -67,8 +67,7 @@
 
 <div class="wrapper">
     <h3>OBJECTIVE</h3>
-    <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to
-        apply my knowledge into Data Engineering and Artificial Intelligence areas to pursue a smarter life.</p>
+    <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to apply my knowledge into Internet of Things and Artificial Intelligence areas to pursue a smarter life.</p>
 </div>
 
 
@@ -76,7 +75,7 @@
     <h3>EDUCATION</h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
     <p><i>Master of Science in Information Technology, Mobility, Expected May 2018</i></p>
-    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741), Telecommunications & Computer Networks (14740), Distributed Systems (15640), Cloud Computing (15619) </p>
+    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741), Telecommunications & Computer Networks (14740), Distributed Systems (15640), Computer Vision Apps (16423) </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
     <p><i>Exchange, Information Systems, December 2015, Major GPA 3.9</i></p>
@@ -91,7 +90,7 @@
     <p><b> Linux Programmer, Assist in programming tasks for Mellon College of Science (Python) </b></p>
     <p><i>Carnegie Mellon University, Pittsburgh, PA, October - present 2016</i></p>
     <ul>
-        <li> use procmail recipes to filter and pipe new email log files to script, then perform anomaly analysis </li>
+        <li> Used procmail recipes to filter emails of server logs and wrote real-time scripts to analyze anomaly. </li>
     </ul>
 
     <p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
@@ -114,52 +113,61 @@
 <div class="wrapper">
     <h3>PROJECT</h3>
     <div class="left">
-        <p><b> Web Application Development (Django) </b></p>
+        <p><b> Nano Blogging Site (Django) </b></p>
         <p><i>Carnegie Mellon University, Fall 2016</i></p>
         <ul>
-            <li> Built a Twitter like nanoblogging site Grumblr with Django MVC design, and web features like
-                ModelForm, Signals and Asynchronous updates.
+            <li> Built a Twitter like nanoblogging site Grumblr with Django MVC design, and features like ModelForm, Signals and AJAX updates.
+            </li>
+        </ul>
+
+        <p><b> Map Calendar Web Application (JavaScript) </b></p>
+        <p><i>Carnegie Mellon University, Fall 2016</i></p>
+        <ul>
+            <li> Undertook the map interactions and logic design for page synchronization of a Location-based calendar web app using Mapbox API.
             </li>
         </ul>
 
         <p><b> Smartphone Software Development (Android) </b></p>
         <p><i>Zhejiang University, Spring 2015</i></p>
         <ul>
-            <li> Designed the Activities logic of a GPS-based real-time bus reminder App and undertook the
-                real-time locating and destination detection part.
+            <li> Designed the Activities logic of a GPS-based real-time bus reminder App and undertook the real-time locating and destination detection part.
             </li>
         </ul>
 
         <p><b> Software Engineering (PHP + MySQL) </b></p>
         <p><i>Zhejiang University, Spring 2015</i></p>
         <ul>
-            <li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in
-                the forum, as well as user privileges.
+            <li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in the forum, as well as users' privilege.
             </li>
         </ul>
     </div>
 
     <div class="right">
-        <p><b> Introduction to Computer Systems (C) </b></p>
+        <p><b> Dynamic Memory Allocator (C) </b></p>
         <p><i>Carnegie Mellon University, Fall 2016</i></p>
         <ul>
             <li> Overwrote the system level Dynamic Storage Allocator, to allocate (malloc), reclaim (free), split, and coalesce memory space from heap.
             </li>
         </ul>
 
-        <p><b> Database System Design (C++) </b></p>
-        <p><i>Zhejiang University, Fall 2014</i></p>
+        <p><b> Concurrent HTTP Web Proxy (C) </b></p>
+        <p><i>Carnegie Mellon University, Fall 2016</i></p>
         <ul>
-            <li> Implemented the Interpreter, Catalog Manager and Buffer Manager of a mini database system, in support
-                of all basic standard SQL queries.
+            <li> Built a thread-based concurrent HTTP web proxy with a thread-safe LRU cache using readers-writer lock model.
             </li>
         </ul>
 
         <p><b> Information Retrieval and Web Search (Java) </b></p>
         <p><i>Zhejiang University, Fall 2014</i></p>
         <ul>
-            <li> Developed the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox
-                Sports NBA news and players.
+            <li> Developed the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox Sports NBA news and players.
+            </li>
+        </ul>
+
+        <p><b> Database System Design (C++) </b></p>
+        <p><i>Zhejiang University, Fall 2014</i></p>
+        <ul>
+            <li> Implemented the Interpreter, Catalog Manager and Buffer Manager part of a mini database system, in support of all basic standard SQL queries.
             </li>
         </ul>
     </div>
@@ -169,7 +177,7 @@
 <div class="wrapper">
     <h3>SKILL</h3>
     <ul>
-        <li> Programming/Scripting Languages: C/C++, Python, Java, JavaScript, HTML, CSS, SQL</li>
+        <li> Programming/Scripting Languages: Python, C/C++, Java, JavaScript, HTML, CSS, SQL</li>
         <li> Frameworks and Tools: Django, jQuery, pySpark, Git, Spring, Hibernate</li>
     </ul>
 </div>
@@ -178,7 +186,7 @@
 <div class="wrapper">
     <h3>COURSES</h3>
     <ul>
-        <li> Machine Learning, Data Science and Engineering with Spark, Overview of Internet of Things </li>
+        <li> Machine Learning, Data Science and Engineering with Spark, Algorithms, Overview of Internet of Things </li>
     </ul>
 </div>
 
