cover letter for Samsung

--- a/resume/resume2.html
+++ b/resume/resume2.html
@@ -67,14 +67,14 @@
 
 <div class="wrapper">
     <h3>OBJECTIVE</h3>
-    <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to apply my knowledge into Internet of Things and Artificial Intelligence areas to pursue a smarter life.</p>
+    <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to apply my knowledge into Data Engineering and Artificial Intelligence areas to pursue a smarter life.</p>
 </div>
 
 
 <div class="wrapper">
     <h3>EDUCATION</h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
-    <p><i>Master of Science in Information Technology, Mobility, Expected May 2018</i></p>
+    <p><i>Master of Science in Information Technology, Mobility, Expected May 2018, GPA 3.54</i></p>
     <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741), Telecommunications & Computer Networks (14740), Distributed Systems (15640), Computer Vision Apps (16423) </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
