update ft resume courses
CN + CC + DS + CVAPPS

--- a/resume/resume2.html
+++ b/resume/resume2.html
@@ -67,7 +67,7 @@
 
 <div class="wrapper">
     <h3>OBJECTIVE</h3>
-    <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to apply my knowledge into Data Engineering and Artificial Intelligence areas to pursue a smarter life.</p>
+    <p class="bio">I'm a graduate student at CMU looking for full-time job of Software Development Engineer. I aspire to apply my knowledge into Internet of Things and Artificial Intelligence areas to pursue a smarter life.</p>
 </div>
 
 
@@ -75,13 +75,13 @@
     <h3>EDUCATION</h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
     <p><i>Master of Science in Information Technology, Mobility, Expected May 2018, GPA 3.54</i></p>
-    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741), Telecommunications & Computer Networks (14740), Distributed Systems (15640), Computer Vision Apps (16423) </p>
+    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Telecommunications & Computer Networks (14740), Cloud Computing (15619), Distributed Systems (15640), Computer Vision Apps (16423) </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
-    <p><i>Exchange, Information Systems, December 2015, Major GPA 3.9</i></p>
+    <p><i>Exchange, Information Systems, December 2015</i></p>
 
     <p><b> Zhejiang University, Hangzhou, China </b></p>
-    <p><i>Bachelor of Engineering, Computer Science, July 2016, Major GPA 3.93</i></p>
+    <p><i>Bachelor of Engineering, Computer Science, July 2016, GPA 3.82</i></p>
 </div>
 
 
