--- a/resume/resume.html
+++ b/resume/resume.html
@@ -74,14 +74,14 @@
 <div class="wrapper">
     <h3>EDUCATION</h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
-    <p><i>Master of Science in Information Technology, Mobility, Expected May 2018</i></p>
+    <p><i>Master of Science in Information Technology, Mobility, Expected May 2018, GPA 3.54</i></p>
     <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741), Telecommunications & Computer Networks (14740), Distributed Systems (15640), Computer Vision Apps (16423) </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
-    <p><i>Exchange, Information Systems, December 2015, Major GPA 3.9</i></p>
+    <p><i>Exchange, Information Systems, December 2015</i></p>
 
     <p><b> Zhejiang University, Hangzhou, China </b></p>
-    <p><i>Bachelor of Engineering, Computer Science, July 2016, Major GPA 3.93</i></p>
+    <p><i>Bachelor of Engineering, Computer Science, July 2016, GPA 3.82</i></p>
 </div>
 
 
