--- a/resume/resume2.html
+++ b/resume/resume2.html
@@ -67,7 +67,7 @@
 
 <div class="wrapper">
     <h3>OBJECTIVE</h3>
-    <p class="bio">I'm a graduate student at CMU looking for full-time job of Software Development Engineer. I aspire to apply my knowledge into Internet of Things and Artificial Intelligence areas to pursue a smarter life.</p>
+    <p class="bio">I'm a graduate student at CMU looking for full-time job of Software Development Engineer. I aspire to apply my knowledge into Cloud Computing and Artificial Intelligence areas to pursue a smarter life.</p>
 </div>
 
 
