--- a/resume/resume.html
+++ b/resume/resume.html
@@ -5,8 +5,8 @@
     <title>Hanyu_Yang_Resume</title>
     <style type="text/css">
         h1, p, h3, h5, ul {
-            margin-top: 2px;
-            margin-bottom: 1px;
+            margin-top: 0.5px;
+            margin-bottom: 0.5px;
         }
 
         h3 {
@@ -67,30 +67,38 @@
 
 <div class="wrapper">
     <h3>OBJECTIVE</h3>
-    <p class="bio">I'm a graduate student looking for internship in Software Engineer or Data Engineer. I aspire to apply my knowledge into Internet of Things and Artificial Intelligence areas to pursue a smarter life.</p>
+    <p class="bio">I'm a graduate student at CMU looking for full-time job of Software Development Engineer. I aspire to apply my knowledge into Cloud Computing and Artificial Intelligence areas to pursue a smarter life.</p>
 </div>
 
 
 <div class="wrapper">
     <h3>EDUCATION</h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
-    <p><i>Master of Science in Information Technology, Mobility, Expected May 2018, GPA 3.54</i></p>
-    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Information Security (14741), Telecommunications & Computer Networks (14740), Distributed Systems (15640), Computer Vision Apps (16423) </p>
+    <p><i>Master of Science in Information Technology, Mobility, August 2016 - Expected December 2017</i></p>
+    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Telecommunications & Computer Networks (14740), Cloud Computing (15619), Distributed Systems (15640), Computer Vision Apps (16423) </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
-    <p><i>Exchange, Information Systems, December 2015</i></p>
+    <p><i>Exchange, Information Systems, August - December 2015</i></p>
 
     <p><b> Zhejiang University, Hangzhou, China </b></p>
-    <p><i>Bachelor of Engineering, Computer Science, July 2016, GPA 3.82</i></p>
+    <p><i>Bachelor of Engineering, Computer Science, September 2012 - July 2016</i></p>
 </div>
 
 
 <div class="wrapper">
     <h3>EXPERIENCE</h3>
-    <p><b> Linux Programmer, Assist in programming tasks for Mellon College of Science (Python) </b></p>
-    <p><i>Carnegie Mellon University, Pittsburgh, PA, October - present 2016</i></p>
+    <p><b> Software Development Engineer Intern (Java) </b></p>
+    <p><i>Amazon, Seattle, WA, May - August 2017</i></p>
     <ul>
-        <li> Used procmail recipes to filter emails of server logs and wrote real-time scripts to analyze anomaly. </li>
+        <li> Amazon Web Services RDS Devinra Team DeploymentService </li>
+        <li> Build a song quiz Alexa skill at Global Intern Hackathon 2017 </li>
+    </ul>
+
+    <p><b> Linux Programmer, Assist in programming tasks for Mellon College of Science (Python) </b></p>
+    <p><i>Carnegie Mellon University, Pittsburgh, PA, October 2016 - June 2017</i></p>
+    <ul>
+        <li> Used procmail recipes to filter emails of server logs and wrote real-time scripts to analyze anomaly </li>
+        <li> Contribute to paper Preemptive Infrastructure Maintenance Through Adaptive Pattern Search </li>
     </ul>
 
     <p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
@@ -127,47 +135,33 @@
             </li>
         </ul>
 
-        <p><b> Smartphone Software Development (Android) </b></p>
-        <p><i>Zhejiang University, Spring 2015</i></p>
-        <ul>
-            <li> Designed the Activities logic of a GPS-based real-time bus reminder App and undertook the real-time locating and destination detection part.
-            </li>
-        </ul>
-
-        <p><b> Software Engineering (PHP + MySQL) </b></p>
-        <p><i>Zhejiang University, Spring 2015</i></p>
-        <ul>
-            <li> Wrote the Administrator Control Panel part of a Campus Forum System, to manage the boards and posts in the forum, as well as users' privilege.
-            </li>
-        </ul>
-    </div>
-
-    <div class="right">
         <p><b> Dynamic Memory Allocator (C) </b></p>
         <p><i>Carnegie Mellon University, Fall 2016</i></p>
         <ul>
             <li> Overwrote the system level Dynamic Storage Allocator, to allocate (malloc), reclaim (free), split, and coalesce memory space from heap.
             </li>
         </ul>
+    </div>
 
-        <p><b> Concurrent HTTP Web Proxy (C) </b></p>
-        <p><i>Carnegie Mellon University, Fall 2016</i></p>
+    <div class="right">
+        <p><b> Computer Vision based Sudoku (C++/OpenCV) </b></p>
+        <p><i>Carnegie Mellon University, Spring 2017</i></p>
         <ul>
-            <li> Built a thread-based concurrent HTTP web proxy with a thread-safe LRU cache using readers-writer lock model.
+            <li> Built an iOS application with OpenCV libraries to let users interact with a printed Sudoku puzzle on their devices.
             </li>
         </ul>
 
-        <p><b> Information Retrieval and Web Search (Java) </b></p>
-        <p><i>Zhejiang University, Fall 2014</i></p>
+        <p><b> Twitter Analytics Web Service (Java) </b></p>
+        <p><i>Carnegie Mellon University, Spring 2017</i></p>
         <ul>
-            <li> Developed the Crawler, Tokenizer, Stemmer, Indexer and Corrector part of a search engine built for Fox Sports NBA news and players.
+            <li> Designed a web service from ETL to backend schema optimization on AWS to support queries with throughput and budget requirement.
             </li>
         </ul>
 
-        <p><b> Database System Design (C++) </b></p>
-        <p><i>Zhejiang University, Fall 2014</i></p>
+        <p><b> File Caching Proxy (Java) </b></p>
+        <p><i>Carnegie Mellon University, Spring 2017</i></p>
         <ul>
-            <li> Implemented the Interpreter, Catalog Manager and Buffer Manager part of a mini database system, in support of all basic standard SQL queries.
+            <li> Implemented a Proxy with LRU Cache Replacement Policy and Check on Use Cache Consistency approach 
             </li>
         </ul>
     </div>
@@ -177,18 +171,11 @@
 <div class="wrapper">
     <h3>SKILL</h3>
     <ul>
-        <li> Programming/Scripting Languages: Python, C/C++, Java, JavaScript, HTML, CSS, SQL</li>
-        <li> Frameworks and Tools: Django, jQuery, pySpark, Git, Spring, Hibernate</li>
+        <li> Programming/Scripting Languages: Java, Python, C/C++, JavaScript, HTML, CSS, SQL</li>
+        <li> Frameworks and Tools: AWS, Git, Django, OpenCV, Ruby-on-Rails, JQuery, Docker, Spark, Kafka</li>
     </ul>
 </div>
 
-
-<div class="wrapper">
-    <h3>COURSES</h3>
-    <ul>
-        <li> Machine Learning, Data Science and Engineering with Spark, Algorithms, Overview of Internet of Things </li>
-    </ul>
-</div>
 
 </body>
 </html>
