--- a/resume/resume.html
+++ b/resume/resume.html
@@ -88,17 +88,17 @@
 <div class="wrapper">
     <h3>EXPERIENCE</h3>
     <p><b> Software Development Engineer Intern (Java) </b></p>
-    <p><i>Amazon, Seattle, WA, May - August 2017</i></p>
+    <p><i>Amazon Web Services, Seattle, WA, May - August 2017</i></p>
     <ul>
-        <li> Amazon Web Services RDS Devinra Team DeploymentService </li>
-        <li> Build a song quiz Alexa skill at Global Intern Hackathon 2017 </li>
+        <li> Added a feature to do exponential waves deployment using DynamoDB and SWF at AWS RDS </li>
+        <li> Built a song quiz Alexa skill at Global Intern Hackathon 2017 </li>
     </ul>
 
     <p><b> Linux Programmer, Assist in programming tasks for Mellon College of Science (Python) </b></p>
     <p><i>Carnegie Mellon University, Pittsburgh, PA, October 2016 - June 2017</i></p>
     <ul>
         <li> Used procmail recipes to filter emails of server logs and wrote real-time scripts to analyze anomaly </li>
-        <li> Contribute to paper Preemptive Infrastructure Maintenance Through Adaptive Pattern Search </li>
+        <li> Contributed to paper Preemptive Infrastructure Maintenance Through Adaptive Pattern Search </li>
     </ul>
 
     <p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
