update fb resume

--- a/resume/fb.html
+++ b/resume/fb.html
@@ -71,7 +71,7 @@
     <p><b> Teaching Assistant for course Cloud Computing (Django) </b></p>
     <p><i> Carnegie Mellon University - Silicon Valley, Mountain View, CA, August - December 2017 </i></p>
     <ul>
-        <li> Building a peer grading system to improve course scalability while reducing TA's grading time </li>
+        <li> Building a peer grading system to improve course scalability by reducing TA's grading time </li>
     </ul>
 
     <p><b> Software Development Engineer Intern (Java) </b></p>
