--- a/resume/resume.html
+++ b/resume/resume.html
@@ -94,7 +94,7 @@
         <li> Built a song quiz Alexa skill at Global Intern Hackathon 2017 </li>
     </ul>
 
-    <p><b> Linux Programmer, Assist in programming tasks for Mellon College of Science (Python) </b></p>
+    <p><b> Research Assistant, Assist in programming tasks for Mellon College of Science (Python) </b></p>
     <p><i>Carnegie Mellon University, Pittsburgh, PA, October 2016 - June 2017</i></p>
     <ul>
         <li> Used procmail recipes to filter emails of server logs and wrote real-time scripts to analyze anomaly </li>
