update resume at 2018.08.06

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -59,39 +59,33 @@
 <div class="center">
     <h1><a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none">Hanyu Yang</a></h1>
     <h5>
-        Email: <a href="mailto:hanyuy@andrew.cmu.edu" style="text-decoration: none">hanyuy@andrew.cmu.edu</a>
+        Email: <a href="mailto:hanyuy@andrew.cmu.edu" style="text-decoration: none">yanghanyugg@gmail.com</a>
         &nbsp;|&nbsp;
         Tel: +1(412)9834514
     </h5>
 </div>
 
-<div class="wrapper">
-    <h3>OBJECTIVE</h3>
-    <p class="bio">I'm a graduate student at CMU looking for full-time job of Software Development Engineer. I aspire to apply my knowledge into Cloud Computing and Artificial Intelligence areas to pursue a smarter life.</p>
-</div>
-
-
-<div class="wrapper">
-    <h3>EDUCATION</h3>
-    <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
-    <p><i>Master of Science in Information Technology, Mobility, August 2016 - Expected December 2017</i></p>
-    <p class="course">Course: Introduction to Computer Systems (15513), Web Application Development (15637), Telecommunications & Computer Networks (14740), Cloud Computing (15619), Distributed Systems (15640), Computer Vision Apps (16423) </p>
-
-    <p><b> Singapore Management University, Singapore </b></p>
-    <p><i>Exchange, Information Systems, August - December 2015</i></p>
-
-    <p><b> Zhejiang University, Hangzhou, China </b></p>
-    <p><i>Bachelor of Engineering, Computer Science, September 2012 - July 2016</i></p>
-</div>
-
 
 <div class="wrapper">
     <h3>EXPERIENCE</h3>
-    <p><b> Software Development Engineer Intern (Java) </b></p>
-    <p><i>Amazon Web Services, Seattle, WA, May - August 2017</i></p>
+    <p><b> Software Development Engineer (Java/Python) </b></p>
+    <p><i>Amazon, Boston, MA, March 2018 - present </i></p>
     <ul>
-        <li> Added a feature to do exponential waves deployment using DynamoDB and SWF at AWS RDS </li>
-        <li> Built a song quiz Alexa skill at Global Intern Hackathon 2017 </li>
+        <li> Built a scalable ETL pipeline with AWS services at Alexa Information Domain </li>
+    </ul>
+
+    <p><b> Teaching Assistant for course Cloud Computing (Django) </b></p>
+    <p><i> Carnegie Mellon University - Silicon Valley, Mountain View, CA, August - December 2017 </i></p>
+    <ul>
+        <li> Developed a peer grading system to improve course scalability by reducing TA's grading time </li>
+    </ul>
+
+    <p><b> Software Development Engineer Intern (Java) </b></p>
+    <p><i><strong>Amazon Web Services</strong>, Seattle, WA, May - August 2017</i></p>
+    <ul>
+        <li> Implemented an exponential way to improve deployment speed by 50% with DynamoDB and SWF </li>
+        <li> Integrated the exponential option and a progress monitor into the Ruby-on-Rails website </li>
+        <li> Built a song quiz Alexa skill with flask-ask framwork and SSML output in Global Intern Hackathon </li>
     </ul>
 
     <p><b> Research Assistant, Assist in programming tasks for Mellon College of Science (Python) </b></p>
@@ -109,12 +103,20 @@
         <li> Improved query performance by replacing Pivots Selecting Algorithms for three index structures</li>
     </ul>
 
-    <p><b> Back-end Engineer (Intern), Cross-Border e-Commerce Web Application (Java) </b></p>
-    <p><i>Jiayun Data Science and Technology, Hangzhou, China, May - July 2015</i></p>
-    <ul>
-        <li> Developed back-end business logic and data access based on Spring and Hibernate framework</li>
-        <li> Generated automated scripts for back-end request and response testing with Jmeter</li>
-    </ul>
+</div>
+
+
+<div class="wrapper">
+    <h3>EDUCATION</h3>
+    <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
+    <p><i>Master of Science in Information Technology, Mobility, August 2016 - December 2017</i></p>
+    <p class="course"> Course: Introduction to Computer Systems, Web Application Development, Telecommunications & Computer Networks, Cloud Computing, Distributed Systems, Computer Vision Apps, Machine Learning, Mobile Hardware for Software Engineer </p>
+
+    <p><b> Singapore Management University, Singapore </b></p>
+    <p><i>Exchange, Information Systems, August - December 2015</i></p>
+
+    <p><b> Zhejiang University, Hangzhou, China </b></p>
+    <p><i>Bachelor of Engineering, Computer Science, September 2012 - July 2016</i></p>
 </div>
 
 
