--- a/resume/resume.html
+++ b/resume/resume.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hanyu_Yang_Resume</title>
+    <title> Hanyu Yang Resume </title>
     <style type="text/css">
         h1, p, h3, h5, ul {
             margin-top: 0.5px;
@@ -57,127 +57,131 @@
 
 <body>
 <div class="center">
-    <h1><a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none">Hanyu Yang</a></h1>
-    <h5>
-        Email: <a href="mailto:hanyuy@andrew.cmu.edu" style="text-decoration: none">yanghanyugg@gmail.com</a>
-        &nbsp;|&nbsp;
-        Tel: +1(412)9834514
-    </h5>
+    <h1><a href="http://henryyang1993.github.io/" style="text-decoration: none"> Hanyu Yang </a></h1>
+    <h5> Email: <a href="mailto:yanghanyugg@gmail.com" style="text-decoration: none"> yanghanyugg@gmail.com </a> &nbsp;|&nbsp; Tel: +1(412)9834514 &nbsp;|&nbsp; Linkedin: <a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none"> Hanyu (Henry) Yang </a> </h5>
 </div>
 
-
 <div class="wrapper">
-    <h3>EXPERIENCE</h3>
-    <p><b> Software Development Engineer (Java/Python) </b></p>
-    <p><i>Amazon, Boston, MA, March 2018 - present </i></p>
+    <h3> EXPERIENCE </h3>
+
+    <p><b> Software Development Engineer (Java, AWS) </b></p>
+    <p><i><strong>Amazon</strong>, Boston, MA, March 2019 - present</i></p>
     <ul>
-        <li> Built a scalable ETL pipeline with AWS services at Alexa Information Domain </li>
+        <li> Delivery Experience </li>
     </ul>
 
-    <p><b> Teaching Assistant for course Cloud Computing (Django) </b></p>
+    <p><b> Software Development Engineer I (Java, Python, AWS) </b></p>
+    <p><i> Amazon, Boston, MA, March 2018 - March 2019 </i></p>
+    <ul>
+        <li> Built scalable ETL pipelines for Search Based Question Answering team at Alexa Information Domain </li>
+    </ul>
+
+    <p><b> Software Developer (Django, AWS) </b></p>
+    <p><i> SLAC National Accelerator Labotory, Menlo Park, CA, September 2017 - December 2017 </i></p>
+    <ul>
+        <li> Wrote an AWS Lambda function to monitor buckets and file changes with AWS CloudTrail </li>
+        <li> Designed a page on Django website to display AWS S3 buckets </li>
+    </ul>
+
+    <p><b> Teaching Assistant for course Cloud Computing (Django, ReactJS) </b></p>
     <p><i> Carnegie Mellon University - Silicon Valley, Mountain View, CA, August - December 2017 </i></p>
     <ul>
-        <li> Developed a peer grading system to improve course scalability by reducing TA's grading time </li>
+        <li> Built a peer grading system to improve course scalability by reducing TA's grading time </li>
     </ul>
 
-    <p><b> Software Development Engineer Intern (Java) </b></p>
-    <p><i><strong>Amazon Web Services</strong>, Seattle, WA, May - August 2017</i></p>
+    <p><b> Software Development Engineer Intern (Java, AWS) </b></p>
+    <p><i> Amazon Web Services, Seattle, WA, May - August 2017 </i></p>
     <ul>
         <li> Implemented an exponential way to improve deployment speed by 50% with DynamoDB and SWF </li>
         <li> Integrated the exponential option and a progress monitor into the Ruby-on-Rails website </li>
         <li> Built a song quiz Alexa skill with flask-ask framwork and SSML output in Global Intern Hackathon </li>
     </ul>
 
-    <p><b> Research Assistant, Assist in programming tasks for Mellon College of Science (Python) </b></p>
-    <p><i>Carnegie Mellon University, Pittsburgh, PA, October 2016 - June 2017</i></p>
+    <p><b> Research Student, Assisted in programming tasks for Mellon College of Science (Python) </b></p>
+    <p><i> Carnegie Mellon University, Pittsburgh, PA, October 2016 - June 2017 </i></p>
     <ul>
         <li> Used procmail recipes to filter emails of server logs and wrote real-time scripts to analyze anomaly </li>
         <li> Contributed to paper Preemptive Infrastructure Maintenance Through Adaptive Pattern Search </li>
     </ul>
 
     <p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
-    <p><i>Singapore Management University, Singapore & Zhejiang University, China, September 2015 -
-        May 2016</i></p>
+    <p><i> Singapore Management University, Singapore & Zhejiang University, China, September 2015 - May 2016 </i></p>
     <ul>
-        <li> Implemented three index structures (LAESA, CPT, EP) for two metric similarity qeuries (Range, kNN)</li>
-        <li> Improved query performance by replacing Pivots Selecting Algorithms for three index structures</li>
+        <li> Implemented three index structures (LAESA, CPT, EP) for two metric similarity qeuries (Range, kNN) </li>
+        <li> Improved query performance by replacing Pivots Selecting Algorithms for three index structures </li>
     </ul>
 
+    <p><b> Back-end Engineer Intern, Cross-Border e-Commerce Web Application (Java) </b></p>
+    <p><i> Club Factory, Hangzhou, China, May - July 2015 </i></p>
+    <ul>
+        <li> Developed back-end business logic and data access based on Spring and Hibernate framework </li>
+        <li> Generated automated scripts for back-end request and response testing with Jmeter </li>
+    </ul>
 </div>
 
-
 <div class="wrapper">
-    <h3>EDUCATION</h3>
+    <h3> EDUCATION </h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
-    <p><i>Master of Science in Information Technology, Mobility, August 2016 - December 2017</i></p>
+    <p><i> Master of Science in Information Technology, Mobility, August 2016 - December 2017 </i></p>
     <p class="course"> Course: Introduction to Computer Systems, Web Application Development, Telecommunications & Computer Networks, Cloud Computing, Distributed Systems, Computer Vision Apps, Machine Learning, Mobile Hardware for Software Engineer </p>
 
     <p><b> Singapore Management University, Singapore </b></p>
-    <p><i>Exchange, Information Systems, August - December 2015</i></p>
+    <p><i> Exchange, Information Systems, August - December 2015 </i></p>
 
     <p><b> Zhejiang University, Hangzhou, China </b></p>
-    <p><i>Bachelor of Engineering, Computer Science, September 2012 - July 2016</i></p>
+    <p><i> Bachelor of Engineering, Computer Science, September 2012 - July 2016 </i></p>
 </div>
 
-
 <div class="wrapper">
-    <h3>PROJECT</h3>
+    <h3> PROJECT </h3>
     <div class="left">
         <p><b> Nano Blogging Site (Django) </b></p>
-        <p><i>Carnegie Mellon University, Fall 2016</i></p>
+        <p><i> Carnegie Mellon University, Fall 2016 </i></p>
         <ul>
-            <li> Built a Twitter like nanoblogging site Grumblr with Django MVC design, and features like ModelForm, Signals and AJAX updates.
-            </li>
+            <li> Built a Twitter like nanoblogging site Grumblr with Django MVC design, and features like ModelForm, Signals and AJAX updates </li>
         </ul>
 
         <p><b> Map Calendar Web Application (JavaScript) </b></p>
-        <p><i>Carnegie Mellon University, Fall 2016</i></p>
+        <p><i> Carnegie Mellon University, Fall 2016 </i></p>
         <ul>
-            <li> Undertook the map interactions and logic design for page synchronization of a Location-based calendar web app using Mapbox API.
-            </li>
+            <li> Undertook the map interactions and logic design for page synchronization of a Location-based calendar web app using Mapbox API </li>
         </ul>
 
         <p><b> Dynamic Memory Allocator (C) </b></p>
-        <p><i>Carnegie Mellon University, Fall 2016</i></p>
+        <p><i> Carnegie Mellon University, Fall 2016 </i></p>
         <ul>
-            <li> Overwrote the system level Dynamic Storage Allocator, to allocate (malloc), reclaim (free), split, and coalesce memory space from heap.
-            </li>
+            <li> Overwrote the system level Dynamic Storage Allocator, to allocate (malloc), reclaim (free), split, and coalesce memory space from heap </li>
         </ul>
     </div>
 
     <div class="right">
         <p><b> Computer Vision based Sudoku (C++/OpenCV) </b></p>
-        <p><i>Carnegie Mellon University, Spring 2017</i></p>
+        <p><i> Carnegie Mellon University, Spring 2017 </i></p>
         <ul>
-            <li> Built an iOS application with OpenCV libraries to let users interact with a printed Sudoku puzzle on their devices.
-            </li>
+            <li> Built an iOS application with OpenCV libraries to let users interact with a printed Sudoku puzzle on their devices </li>
         </ul>
 
         <p><b> Twitter Analytics Web Service (Java) </b></p>
-        <p><i>Carnegie Mellon University, Spring 2017</i></p>
+        <p><i> Carnegie Mellon University, Spring 2017 </i></p>
         <ul>
-            <li> Designed a web service from ETL to backend schema optimization on AWS to support queries with throughput and budget requirement.
-            </li>
+            <li> Designed a web service from ETL to backend schema optimization on AWS to support queries with throughput and budget requirement </li>
         </ul>
 
         <p><b> File Caching Proxy (Java) </b></p>
-        <p><i>Carnegie Mellon University, Spring 2017</i></p>
+        <p><i> Carnegie Mellon University, Spring 2017 </i></p>
         <ul>
-            <li> Implemented a Proxy with LRU Cache Replacement Policy and Check on Use Cache Consistency approach 
-            </li>
+            <li> Implemented a Proxy with LRU Cache Replacement Policy and Check on Use Cache Consistency approach </li>
         </ul>
     </div>
 </div>
 
-
 <div class="wrapper">
-    <h3>SKILL</h3>
+    <h3> SKILL </h3>
     <ul>
-        <li> Programming/Scripting Languages: Java, Python, C/C++, JavaScript, HTML, CSS, SQL</li>
-        <li> Frameworks and Tools: AWS, Git, Django, OpenCV, Ruby-on-Rails, JQuery, Docker, Spark, Kafka</li>
+        <li> Programming/Scripting Languages: Java, Python, C/C++, JavaScript, HTML, CSS, SQL </li>
+        <li> Frameworks and Tools: AWS, Elasticsearch, Git, Django, OpenCV, Ruby-on-Rails, JQuery, Docker, Spark, Kafka </li>
     </ul>
 </div>
-
-
 </body>
+
 </html>
