update resume for H1B purpose
update NY experience

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -65,9 +65,9 @@
     <h3> EXPERIENCE </h3>
 
     <p><b> Software Development Engineer (Java, AWS) </b></p>
-    <p><i><strong>Amazon</strong>, Boston, MA, March 2019 - present</i></p>
+    <p><i><strong>Amazon</strong>, New York City, NY, March 2019 - present</i></p>
     <ul>
-        <li> Delivery Experience </li>
+        <li> Improving the discoverability of delivery options for all Amazon.com customers. </li>
     </ul>
 
     <p><b> Software Development Engineer I (Java, Python, AWS) </b></p>
