remove strong tag

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -65,7 +65,7 @@
     <h3> EXPERIENCE </h3>
 
     <p><b> Software Development Engineer (Java, AWS) </b></p>
-    <p><i><strong>Amazon</strong>, New York City, NY, March 2019 - present</i></p>
+    <p><i>Amazon, New York City, NY, March 2019 - present</i></p>
     <ul>
         <li> Improving the discoverability of delivery options for all Amazon.com customers. </li>
     </ul>
