update ny experience

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -67,7 +67,7 @@
     <p><b> Software Development Engineer (Java, AWS) </b></p>
     <p><i>Amazon, New York City, NY, March 2019 - present</i></p>
     <ul>
-        <li> Improving the discoverability of delivery options for all Amazon.com customers. </li>
+        <li> Improving the discoverability of delivery options for all Amazon customers </li>
     </ul>
 
     <p><b> Software Development Engineer I (Java, Python, AWS) </b></p>
