add SCOT team experience

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -64,13 +64,19 @@
 <div class="wrapper">
     <h3> EXPERIENCE </h3>
 
-    <p><b> Software Development Engineer (Java, AWS) </b></p>
-    <p><i>Amazon, New York City, NY, March 2019 - present</i></p>
+    <p><b> Software Development Engineer </b></p>
+    <p><i>Amazon, New York City, NY, December 2019 - present</i></p>
     <ul>
-        <li> Improving the discoverability of delivery options for all Amazon customers </li>
+        <li> Building data pipelines and models to forecast product sales in new Amazon marketplaces </li>
     </ul>
 
-    <p><b> Software Development Engineer I (Java, Python, AWS) </b></p>
+    <p><b> Software Development Engineer (Java, JavaScript) </b></p>
+    <p><i>Amazon, New York City, NY, March 2019 - December 2019 </i></p>
+    <ul>
+        <li> Improved the discoverability of faster delivery speed for all Amazon.com customers </li>
+    </ul>
+
+    <p><b> Software Development Engineer (Java, Python, AWS) </b></p>
     <p><i> Amazon, Boston, MA, March 2018 - March 2019 </i></p>
     <ul>
         <li> Built scalable ETL pipelines for Search Based Question Answering team at Alexa Information Domain </li>
