update SCOT experience

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -67,7 +67,7 @@
     <p><b> Software Development Engineer </b></p>
     <p><i>Amazon, New York City, NY, December 2019 - present</i></p>
     <ul>
-        <li> Building data pipelines and models to forecast product sales in new Amazon marketplaces </li>
+        <li> Automating workflows to forecast and vend demands of products in new Amazon marketplaces </li>
     </ul>
 
     <p><b> Software Development Engineer (Java, JavaScript) </b></p>
