simplify resume work experience

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -64,35 +64,12 @@
 <div class="wrapper">
     <h3> EXPERIENCE </h3>
 
-    <p><b> Software Development Engineer </b></p>
-    <p><i>Amazon, New York City, NY, December 2019 - present</i></p>
+    <p><b> Software Development Engineer (Java, Spark, AWS)</b></p>
+    <p><i>Amazon, New York City, NY, March 2018 - present</i></p>
     <ul>
-        <li> Automating workflows to forecast and vend demands of products in new Amazon marketplaces </li>
-    </ul>
-
-    <p><b> Software Development Engineer (Java, JavaScript) </b></p>
-    <p><i>Amazon, New York City, NY, March 2019 - December 2019 </i></p>
-    <ul>
+        <li> Building model workflows to forecast demand for Amazon emerging businesses </li>
         <li> Improved the discoverability of faster delivery speed for all Amazon.com customers </li>
-    </ul>
-
-    <p><b> Software Development Engineer (Java, Python, AWS) </b></p>
-    <p><i> Amazon, Boston, MA, March 2018 - March 2019 </i></p>
-    <ul>
         <li> Built scalable ETL pipelines for Search Based Question Answering team at Alexa Information Domain </li>
-    </ul>
-
-    <p><b> Software Developer (Django, AWS) </b></p>
-    <p><i> SLAC National Accelerator Labotory, Menlo Park, CA, September 2017 - December 2017 </i></p>
-    <ul>
-        <li> Wrote an AWS Lambda function to monitor buckets and file changes with AWS CloudTrail </li>
-        <li> Designed a page on Django website to display AWS S3 buckets </li>
-    </ul>
-
-    <p><b> Teaching Assistant for course Cloud Computing (Django, ReactJS) </b></p>
-    <p><i> Carnegie Mellon University - Silicon Valley, Mountain View, CA, August - December 2017 </i></p>
-    <ul>
-        <li> Built a peer grading system to improve course scalability by reducing TA's grading time </li>
     </ul>
 
     <p><b> Software Development Engineer Intern (Java, AWS) </b></p>
@@ -101,20 +78,6 @@
         <li> Implemented an exponential way to improve deployment speed by 50% with DynamoDB and SWF </li>
         <li> Integrated the exponential option and a progress monitor into the Ruby-on-Rails website </li>
         <li> Built a song quiz Alexa skill with flask-ask framwork and SSML output in Global Intern Hackathon </li>
-    </ul>
-
-    <p><b> Research Student, Assisted in programming tasks for Mellon College of Science (Python) </b></p>
-    <p><i> Carnegie Mellon University, Pittsburgh, PA, October 2016 - June 2017 </i></p>
-    <ul>
-        <li> Used procmail recipes to filter emails of server logs and wrote real-time scripts to analyze anomaly </li>
-        <li> Contributed to paper Preemptive Infrastructure Maintenance Through Adaptive Pattern Search </li>
-    </ul>
-
-    <p><b> Research Student, Experimental Evaluation for Pivot-based Metric Index (C++) </b></p>
-    <p><i> Singapore Management University, Singapore & Zhejiang University, China, September 2015 - May 2016 </i></p>
-    <ul>
-        <li> Implemented three index structures (LAESA, CPT, EP) for two metric similarity qeuries (Range, kNN) </li>
-        <li> Improved query performance by replacing Pivots Selecting Algorithms for three index structures </li>
     </ul>
 
     <p><b> Back-end Engineer Intern, Cross-Border e-Commerce Web Application (Java) </b></p>
