--- a/resume/resume.html
+++ b/resume/resume.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Hanyu Yang Resume </title>
+    <title> Henry Yang Resume </title>
     <style type="text/css">
         h1, p, h3, h5, ul {
             margin-top: 0.5px;
@@ -57,19 +57,21 @@
 
 <body>
 <div class="center">
-    <h1><a href="http://henryyang1993.github.io/" style="text-decoration: none"> Hanyu Yang </a></h1>
-    <h5> Email: <a href="mailto:yanghanyugg@gmail.com" style="text-decoration: none"> yanghanyugg@gmail.com </a> &nbsp;|&nbsp; Tel: +1(412)9834514 &nbsp;|&nbsp; Linkedin: <a href="https://www.linkedin.com/in/hanyuy" style="text-decoration: none"> Hanyu (Henry) Yang </a> </h5>
+    <h1><a href="http://henryyang1993.github.io/" style="text-decoration: none"> Henry Yang </a></h1>
+    <h5> Email: <a href="mailto:yanghanyugg@gmail.com" style="text-decoration: none"> yanghanyugg@gmail.com </a> &nbsp;|&nbsp; Linkedin: https://www.linkedin.com/in/hanyuy </h5>
 </div>
+
+<br />
 
 <div class="wrapper">
     <h3> EXPERIENCE </h3>
 
-    <p><b> Software Development Engineer (Java, Spark, AWS)</b></p>
-    <p><i>Amazon, New York City, NY, March 2018 - present</i></p>
+    <p><b> Software Development Engineer (Java, Python, Spark, AWS)</b></p>
+    <p><i> Amazon Alexa, Boston, MA, 2018; Amazon Retail, New York City, NY, 2019 - present</i></p>
     <ul>
-        <li> Building model workflows to forecast demand for Amazon emerging businesses </li>
-        <li> Improved the discoverability of faster delivery speed for all Amazon.com customers </li>
-        <li> Built scalable ETL pipelines for Search Based Question Answering team at Alexa Information Domain </li>
+        <li> Building Machine Learning model workflows to forecast demand for Amazon emerging businesses </li>
+        <li> Improved the discoverability of faster delivery speed for Amazon retail customers </li>
+        <li> Built scalable realtime and batch ETL pipelines to ingest Wikipedia and news sources for Alexa QA </li>
     </ul>
 
     <p><b> Software Development Engineer Intern (Java, AWS) </b></p>
@@ -88,6 +90,8 @@
     </ul>
 </div>
 
+<br />
+
 <div class="wrapper">
     <h3> EDUCATION </h3>
     <p><b> Carnegie Mellon University, Pittsburgh, PA & Silicon Valley, CA </b></p>
@@ -101,13 +105,15 @@
     <p><i> Bachelor of Engineering, Computer Science, September 2012 - July 2016 </i></p>
 </div>
 
+<br />
+
 <div class="wrapper">
     <h3> PROJECT </h3>
     <div class="left">
-        <p><b> Nano Blogging Site (Django) </b></p>
-        <p><i> Carnegie Mellon University, Fall 2016 </i></p>
+        <p><b> Energy Data Monitoring (Django, AWS) </b></p>
+        <p><i> SLAC National Accelerator Laboratory, Fall 2017 </i></p>
         <ul>
-            <li> Built a Twitter like nanoblogging site Grumblr with Django MVC design, and features like ModelForm, Signals and AJAX updates </li>
+            <li> Used AWS Lambda to monitor and Django to display S3 buckets and files changes in AWS CloudTrail logs </li>
         </ul>
 
         <p><b> Map Calendar Web Application (JavaScript) </b></p>
@@ -144,11 +150,13 @@
     </div>
 </div>
 
+<br />
+
 <div class="wrapper">
     <h3> SKILL </h3>
     <ul>
-        <li> Programming/Scripting Languages: Java, Python, C/C++, JavaScript, HTML, CSS, SQL </li>
-        <li> Frameworks and Tools: AWS, Elasticsearch, Git, Django, OpenCV, Ruby-on-Rails, JQuery, Docker, Spark, Kafka </li>
+        <li> Programming/Scripting Languages: Java, Python, Scala, C/C++, JavaScript, HTML, CSS, SQL </li>
+        <li> Frameworks and Tools: SageMaker, Step Functions, Spark on EMR, Elasticsearch, Git, Django, OpenCV, Ruby-on-Rails, JQuery, Docker, Kafka </li>
     </ul>
 </div>
 </body>
